# AstroMap

./: CMakeLists.txt  README.md  main.cpp  stars.csv
data/: lightcurves.txt  stars.csv
include/: benchmark.hpp
include/core/: AsciiStarMap.hpp  Star.hpp  Vector3D.hpp
include/engine/: GalacticEngine.hpp
include/structures/: FibonacciHeap.hpp  Octree.hpp  RangeTree.hpp  SuffixTree.hpp  advanced_structures.hpp  vEBTree.hpp
src/: AsciiStarMap.cpp  FibonacciHeap.cpp  GalacticEngine.cpp  Octree.cpp  RangeTree.cpp  SuffixTree.cpp  advanced_structures.cpp  benchmark.cpp  vEBTree.cpp
tests/: test_advanced.cpp  test_benchmark.cpp  test_octree.cpp  test_veb.cpp
web/: cli.html  engine.js  styles.css
